brand pic bg change on lightmode

--- a/css/main.css
+++ b/css/main.css
@@ -588,9 +588,11 @@ background: linear-gradient(to right, #667eea, #764ba2);
     .menu-branding {
         transition: all .5s ease-out;
         transform: translate3d(0, 100%, 0);
+        background: var(--main-bg-color);
+    }
+    .menu-branding .light-mode{
         background: var(--bg-gradient);
     }
-
     .menu-branding.show {
         transform: translate3d(0, 0, 0);
     }
