--- a/css/style.css
+++ b/css/style.css
@@ -90,15 +90,15 @@ a {
   color: inherit; }
 
 span {
-  -webkit-box-shadow: inset 0 -0.3rem 0 0 #2EAFAC;
-          box-shadow: inset 0 -0.3rem 0 0 #2EAFAC;
+  -webkit-box-shadow: inset 0 -0.3rem 0 0 #2eafac60;
+          box-shadow: inset 0 -0.3rem 0 0 #2eafac60;
   -webkit-transition: -webkit-box-shadow 0.2s;
   transition: -webkit-box-shadow 0.2s;
   transition: box-shadow 0.2s;
   transition: box-shadow 0.2s, -webkit-box-shadow 0.2s; }
   span:hover {
-    -webkit-box-shadow: inset 0 -2.5rem 0 0 #2EAFAC;
-            box-shadow: inset 0 -2.5rem 0 0 #2EAFAC; }
+    -webkit-box-shadow: inset 0 -2.5rem 0 0 #2eafac60;
+            box-shadow: inset 0 -2.5rem 0 0 #2eafac60; }
 
 p {
   margin: 0.5em 0; }
@@ -833,4 +833,43 @@ section {
     height: 150px;
     width: 200px;
     margin: 2em; } }
+
+@media (min-width: 1024px) {
+  .mouse {
+    position: fixed;
+    content: "";
+    -webkit-transform: translate(var(--x), var(--y));
+            transform: translate(var(--x), var(--y));
+    z-index: 3;
+    width: 50px;
+    height: 50px;
+    pointer-events: none;
+    -webkit-transition: -webkit-transform 0.01s ease-in-out;
+    transition: -webkit-transform 0.01s ease-in-out;
+    transition: transform 0.01s ease-in-out;
+    transition: transform 0.01s ease-in-out, -webkit-transform 0.01s ease-in-out; }
+    .mouse::before {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 100%;
+      border: 2px dotted #4950a4;
+      border-radius: 50%;
+      pointer-events: none;
+      -webkit-animation: rotate 4s linear infinite;
+              animation: rotate 4s linear infinite; }
+  @-webkit-keyframes rotate {
+    from {
+      -webkit-transform: rotate(0deg);
+              transform: rotate(0deg); }
+    to {
+      -webkit-transform: rotate(360deg);
+              transform: rotate(360deg); } }
+  @keyframes rotate {
+    from {
+      -webkit-transform: rotate(0deg);
+              transform: rotate(0deg); }
+    to {
+      -webkit-transform: rotate(360deg);
+              transform: rotate(360deg); } } }
 /*# sourceMappingURL=style.css.map */
