--- a/scss/style.scss
+++ b/scss/style.scss
@@ -53,14 +53,18 @@ $white_grey: lighten($grey, 25%);
 $white: #fff;
 $black: #000;
 $Purple_Heart: #673ab7;
-$blue_gradient: linear-gradient(190deg,
+$blue_gradient: linear-gradient(
+  190deg,
   rgba(51, 8, 103, 1) 0%,
   rgba(46, 46, 210, 1) 50%,
-  rgb(7, 66, 114) 100%);
-$blue_gradient_reverse: linear-gradient(190deg,
+  rgb(7, 66, 114) 100%
+);
+$blue_gradient_reverse: linear-gradient(
+  190deg,
   rgb(7, 66, 114) 0%,
   rgba(46, 46, 210, 1) 50%,
-  rgba(51, 8, 103, 1) 100%);
+  rgba(51, 8, 103, 1) 100%
+);
 $box-shadow: 10px 10px 5px -4px rgba(0, 0, 0, 0.12);
 
 //custom scroll bar
@@ -122,11 +126,11 @@ a {
 }
 
 span {
-  box-shadow: inset 0 -0.3rem 0 0 #2EAFAC;
+  box-shadow: inset 0 -0.3rem 0 0 #2eafac60;
   transition: box-shadow 0.2s;
 
   &:hover {
-    box-shadow: inset 0 -2.5rem 0 0 #2EAFAC;
+    box-shadow: inset 0 -2.5rem 0 0 #2eafac60;
   }
 }
 
@@ -224,15 +228,15 @@ aside {
       width: 0;
       height: 0;
 
-      &:checked+.slider {
+      &:checked + .slider {
         background: #2196f3;
       }
 
-      &:focus+.slider {
+      &:focus + .slider {
         box-shadow: 0 0 1px #2196f3;
       }
 
-      &:checked+.slider::before {
+      &:checked + .slider::before {
         transform: translateX(32px);
       }
     }
@@ -550,7 +554,7 @@ section {
   margin: 5em 2em;
   display: grid;
   grid-gap: 30px;
-  grid-template-areas: "bioimage bio bio""job1 job2 job3";
+  grid-template-areas: "bioimage bio bio" "job1 job2 job3";
   grid-template-columns: repeat(3, 1fr);
 
   .bio-image {
@@ -942,7 +946,6 @@ section {
   }
 
   .about-info {
-
     .job-1,
     .job-2,
     .job-3 {
@@ -961,7 +964,6 @@ section {
   }
 
   .nav-icon {
-
     &::after,
     &::before,
     div {
@@ -1063,7 +1065,7 @@ section {
   .about-info {
     margin: 5em 2em;
     grid-gap: 30px;
-    grid-template-areas: "bioimage""bio""job1""job2""job3";
+    grid-template-areas: "bioimage" "bio" "job1" "job2" "job3";
     grid-template-columns: 1fr;
   }
 
@@ -1080,6 +1082,37 @@ section {
       height: 150px;
       width: 200px;
       margin: 2em;
+    }
+  }
+}
+// mouse effect style
+@media #{$desktop} {
+  .mouse {
+    position: fixed;
+    content: "";
+    transform: translate(var(--x), var(--y));
+    z-index: 3;
+    width: 50px;
+    height: 50px;
+    pointer-events: none;
+    transition: transform 0.01s ease-in-out;
+    &::before {
+      position: absolute;
+      content: "";
+      width: 100%;
+      height: 100%;
+      border: 2px dotted #4950a4;
+      border-radius: 50%;
+      pointer-events: none;
+      animation: rotate 4s linear infinite;
+    }
+  }
+  @keyframes rotate {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
     }
   }
 }
