--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:300, 400, 600, 700");
-@import url("https://fonts.googleapis.com/css?family=Playfair+Display");
+@import url("https://fonts.googleapis.com/css?family=Poppins:300, 400, 600, 700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Playfair+Display&display=swap");
 *,
 *::before,
 *::after {
