--- a/css/style.scss
+++ b/css/style.scss
@@ -503,7 +503,12 @@ footer .pagination {
 /*------- Contact Page -------*/
 #contact {
   .content {
-    max-width: 60%;
+@media #{$tablet}{
+max-width: 60%;
+    }
+width:100%;
+padding-left:10px;
+padding-right:10px;
     margin: 0 auto;
   }
   .intro {
@@ -609,16 +614,12 @@ nav > li {
       clip-path: polygon(0 46%, 100% 46%, 100% 100%, 0 100%);
     }
   }
-
-  &:hover .char:before,
   &.animate .char:before {
     transform: translateY(-45%) scaleY(0);
   }
-  &:hover .char:after,
   &.animate .char:after {
     transform: translateY(45%) scaleY(0);
   }
-  &:hover,
   &.animate {
     .char,
     .char:before,
