--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:300, 400, 600, 700");
-@import url("https://fonts.googleapis.com/css?family=Playfair+Display");
+@import url("https://fonts.googleapis.com/css?family=Poppins:300, 400, 600, 700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Playfair+Display&display=swap");
 *,
 *::before,
 *::after {
@@ -35,7 +35,6 @@ h4,
 h5,
 h6 {
   font-family: inherit;
-  font-weight: 500;
   line-height: 1.1;
   color: inherit; }
 
@@ -84,9 +83,6 @@ p {
 
 .mt-xl {
   margin-top: 150px; }
-
-.p-md {
-  padding: 30px; }
 
 .disabled {
   opacity: 0.6;
@@ -468,11 +464,17 @@ footer .pagination {
 
 /*------- Contact Page -------*/
 #contact .content {
-  max-width: 60%;
+  width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
   margin: 0 auto; }
+  @media (min-width: 768px) {
+    #contact .content {
+      max-width: 60%; } }
 
 #contact .intro {
-  text-align: center; }
+  text-align: center;
+  margin: 30px 10px; }
   #contact .intro .typed,
   #contact .intro .typed-cursor {
     font-family: var(--f-Playfair);
@@ -481,7 +483,7 @@ footer .pagination {
 
 #contact form.contact-form {
   margin: 15px;
-  margin-top: 30px; }
+  margin-top: 40px; }
   #contact form.contact-form label {
     font-family: var(--f-Poppins);
     font-weight: normal;
@@ -528,7 +530,13 @@ footer .pagination {
     #contact form.contact-form .btn:hover {
       background: var(--clr-black-6); }
   #contact form.contact-form span {
-    font-family: var(--f-Playfair); }
+    font-family: var(--f-Playfair);
+    display: block;
+    padding: 10px 5px; }
+    @media (min-width: 768px) {
+      #contact form.contact-form span {
+        display: inline;
+        padding: 30px; } }
 
 #contact p.response {
   font-size: 1rem;
@@ -571,19 +579,15 @@ nav > li {
     -webkit-clip-path: polygon(0 46%, 100% 46%, 100% 100%, 0 100%);
             clip-path: polygon(0 46%, 100% 46%, 100% 100%, 0 100%); }
 
-.zip-it:hover .char:before,
 .zip-it.animate .char:before {
   -webkit-transform: translateY(-45%) scaleY(0);
           transform: translateY(-45%) scaleY(0); }
 
-.zip-it:hover .char:after,
 .zip-it.animate .char:after {
   -webkit-transform: translateY(45%) scaleY(0);
           transform: translateY(45%) scaleY(0); }
 
-.zip-it:hover .char,
-.zip-it:hover .char:before,
-.zip-it:hover .char:after, .zip-it.animate .char,
+.zip-it.animate .char,
 .zip-it.animate .char:before,
 .zip-it.animate .char:after {
   -webkit-transition-delay: calc(0.5s * var(--char-percent));
