--- a/css/style.css
+++ b/css/style.css
@@ -576,17 +576,21 @@ nav > li {
     -webkit-clip-path: polygon(0 46%, 100% 46%, 100% 100%, 0 100%);
             clip-path: polygon(0 46%, 100% 46%, 100% 100%, 0 100%); }
 
-.zip-it.animate .char:before {
+.zip-it:hover .char::before,
+.zip-it.animate .char::before {
   -webkit-transform: translateY(-45%) scaleY(0);
           transform: translateY(-45%) scaleY(0); }
 
-.zip-it.animate .char:after {
+.zip-it:hover .char::after,
+.zip-it.animate .char::after {
   -webkit-transform: translateY(45%) scaleY(0);
           transform: translateY(45%) scaleY(0); }
 
-.zip-it.animate .char,
-.zip-it.animate .char:before,
-.zip-it.animate .char:after {
+.zip-it:hover .char,
+.zip-it:hover .char::before,
+.zip-it:hover .char::after, .zip-it.animate .char,
+.zip-it.animate .char::before,
+.zip-it.animate .char::after {
   -webkit-transition-delay: calc(0.5s * var(--char-percent));
           transition-delay: calc(0.5s * var(--char-percent)); }
 
