--- a/css/style.scss
+++ b/css/style.scss
@@ -613,16 +613,20 @@ nav > li {
       clip-path: polygon(0 46%, 100% 46%, 100% 100%, 0 100%);
     }
   }
-  &.animate .char:before {
+  &:hover .char::before,
+  &.animate .char::before {
     transform: translateY(-45%) scaleY(0);
   }
-  &.animate .char:after {
+  &:hover .char::after,
+  &.animate .char::after {
     transform: translateY(45%) scaleY(0);
   }
+
+  &:hover,
   &.animate {
     .char,
-    .char:before,
-    .char:after {
+    .char::before,
+    .char::after {
       transition-delay: calc(0.5s * var(--char-percent));
     }
   }
