changed effect and positioned absolute

--- a/css/style.css
+++ b/css/style.css
@@ -76,11 +76,6 @@ p {
   max-width: 100%;
   margin-bottom: 20px; }
 
-.flex-grow-1 {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1; }
-
 .mt-xl {
   margin-top: 150px; }
 
@@ -188,21 +183,36 @@ nav.main-nav {
         width: 100%; }
 
 /* Portfolio / Works */
-section.portfolio_slider {
-  height: calc(100% - 20px);
-  margin: 20px 15px 0; }
-  section.portfolio_slider .portfolio_slider_images {
+.portfolio_slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 200px 20px 60px; }
+  .portfolio_slider_images {
     height: 100%;
     padding-bottom: 60px; }
-    section.portfolio_slider .portfolio_slider_images li {
+    .portfolio_slider_images li {
+      height: 100%;
+      opacity: 0;
+      display: none;
+      -webkit-transition: opacity 1s ease-in;
+      transition: opacity 1s ease-in;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -ms-flex-line-pack: center;
+          align-content: center;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
       background-size: cover;
       background-position: center center;
-      height: 100%;
-      display: none;
-      opacity: 0;
-      -webkit-transition: opacity 1s ease-in;
-      transition: opacity 1s ease-in; }
-      section.portfolio_slider .portfolio_slider_images li.active {
+      text-align: center; }
+      .portfolio_slider_images li.active {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
@@ -232,7 +242,7 @@ section.portfolio_slider {
     opacity: 0; }
   to {
     opacity: 1; } }
-    section.portfolio_slider .portfolio_slider_images h1 {
+    .portfolio_slider_images h1 {
       font-size: 4.5rem;
       text-align: center;
       margin-top: auto;
@@ -241,27 +251,29 @@ section.portfolio_slider {
       width: 100%;
       mix-blend-mode: overlay; }
       @media (min-width: 1024px) {
-        section.portfolio_slider .portfolio_slider_images h1 {
+        .portfolio_slider_images h1 {
           font-size: 10rem; } }
-      section.portfolio_slider .portfolio_slider_images h1::-moz-selection {
+      .portfolio_slider_images h1::-moz-selection {
         background-color: var(--clr-white); }
-      section.portfolio_slider .portfolio_slider_images h1::selection {
+      .portfolio_slider_images h1::selection {
         background-color: var(--clr-white); }
-  section.portfolio_slider .portfolio_slider_navigation {
-    margin-top: -60px;
-    height: 60px;
-    width: 100%;
+  .portfolio_slider_navigation {
     text-align: center;
     white-space: nowrap;
-    overflow-x: scroll;
-    overflow-y: hidden; }
+    height: 60px;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    margin: 0;
+    padding: 0; }
     @media (min-width: 768px) {
-      section.portfolio_slider .portfolio_slider_navigation {
+      .portfolio_slider_navigation {
         overflow: hidden; } }
-    section.portfolio_slider .portfolio_slider_navigation li {
+    .portfolio_slider_navigation li {
       display: inline-block;
       margin: 0 5px; }
-      section.portfolio_slider .portfolio_slider_navigation li a {
+      .portfolio_slider_navigation li a {
         height: 60px;
         line-height: 60px;
         color: var(--clr-nearWhite);
@@ -269,10 +281,10 @@ section.portfolio_slider {
         font-weight: 600;
         -webkit-transition: all 0.7s;
         transition: all 0.7s; }
-        section.portfolio_slider .portfolio_slider_navigation li a:hover {
+        .portfolio_slider_navigation li a:hover {
           text-decoration: underline;
           color: var(--clr-black); }
-      section.portfolio_slider .portfolio_slider_navigation li.active a {
+      .portfolio_slider_navigation li.active a {
         color: var(--clr-black); }
 
 /*------- Work details Page -------*/
@@ -288,46 +300,46 @@ section.portfolio_slider {
     margin: 10px auto; }
 
 /*------- About Page -------*/
-section.container-fluid {
+#about {
   padding: 0; }
-  section.container-fluid .content a {
+  #about .content a {
     text-decoration: underline; }
   @media (min-width: 768px) {
-    section.container-fluid {
+    #about {
       padding: 0 35px; } }
-  section.container-fluid .wrapper > * {
+  #about .wrapper > * {
     padding-left: 15px;
     padding-right: 15px; }
-  section.container-fluid p {
+  #about p {
     margin-bottom: 30px; }
-  section.container-fluid .with-sidebar {
+  #about .with-sidebar {
     --space: 0.5rem;
     overflow: hidden; }
-    section.container-fluid .with-sidebar > * {
+    #about .with-sidebar > * {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
       margin: calc(var(--space) / 2 * -1); }
-      section.container-fluid .with-sidebar > * > * {
+      #about .with-sidebar > * > * {
         margin: calc(var(--space) / 2);
         -ms-flex-preferred-size: 33.33333%;
             flex-basis: 33.33333%;
         -webkit-box-flex: 1;
             -ms-flex-positive: 1;
                 flex-grow: 1; }
-      section.container-fluid .with-sidebar > * > :last-child {
+      #about .with-sidebar > * > :last-child {
         -ms-flex-preferred-size: 0;
             flex-basis: 0;
         -webkit-box-flex: 999;
             -ms-flex-positive: 999;
                 flex-grow: 999;
         min-width: calc(65% - var(--space)); }
-  section.container-fluid .selfie img {
+  #about .selfie img {
     margin: 15px 0;
     margin-top: 50px; }
-  section.container-fluid h1 {
+  #about h1 {
     margin-top: 40px;
     margin-bottom: 75px;
     font-weight: 400;
@@ -335,14 +347,14 @@ section.container-fluid {
     line-height: 1.37;
     font-size: 1.5rem; }
     @media (min-width: 768px) {
-      section.container-fluid h1 {
+      #about h1 {
         font-size: 2.5rem; } }
   @media screen and (min-width: 901px) {
-    section.container-fluid #sticky {
+    #about #sticky {
       position: relative; } }
-  section.container-fluid #sticky .table {
+  #about #sticky .table {
     margin-top: 30px; }
-    section.container-fluid #sticky .table tr td {
+    #about #sticky .table tr td {
       border: 0;
       padding: 3px 0;
       line-height: 1.7;
@@ -351,21 +363,21 @@ section.container-fluid {
       padding-right: 20px;
       white-space: nowrap;
       vertical-align: top; }
-      section.container-fluid #sticky .table tr td a {
+      #about #sticky .table tr td a {
         display: block; }
   @media screen and (min-width: 901px) {
-    section.container-fluid #sticky.sticky {
+    #about #sticky.sticky {
       position: fixed;
       width: 26.5%; } }
-  section.container-fluid h4 {
+  #about h4 {
     font-family: var(--f-Poppins);
     letter-spacing: 2px;
     text-transform: uppercase;
     margin-top: 65px;
     margin-bottom: 10px; }
-  section.container-fluid .title {
+  #about .title {
     text-align: center; }
-    section.container-fluid .title h4 {
+    #about .title h4 {
       font-size: 1.1rem; }
 
 /*------- Blog Page -------*/
@@ -557,42 +569,30 @@ nav > li {
           transform: matrix(1, 0, 0, 1, -50, -15); }
 
 /* splliting js animation */
-.zip-it .char {
-  color: var(--clr-black); }
-  .zip-it .char, .zip-it .char::before, .zip-it .char::after {
-    -webkit-transition: -webkit-transform 0.8s cubic-bezier(0.75, 0, 0.25, 1);
-    transition: -webkit-transform 0.8s cubic-bezier(0.75, 0, 0.25, 1);
-    transition: transform 0.8s cubic-bezier(0.75, 0, 0.25, 1);
-    transition: transform 0.8s cubic-bezier(0.75, 0, 0.25, 1), -webkit-transform 0.8s cubic-bezier(0.75, 0, 0.25, 1);
-    -webkit-transition-delay: calc(0.5s * (1 - var(--char-percent)));
-            transition-delay: calc(0.5s * (1 - var(--char-percent))); }
-  .zip-it .char::before, .zip-it .char::after {
+.slide-horizontal .char {
+  overflow: hidden;
+  color: transparent; }
+  .slide-horizontal .char:before, .slide-horizontal .char:after {
     visibility: visible;
-    color: var(--clr-white); }
-  .zip-it .char::before {
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 54%, 0 54%);
-            clip-path: polygon(0 0, 100% 0, 100% 54%, 0 54%); }
-  .zip-it .char::after {
-    -webkit-clip-path: polygon(0 46%, 100% 46%, 100% 100%, 0 100%);
-            clip-path: polygon(0 46%, 100% 46%, 100% 100%, 0 100%); }
+    color: var(--clr-white);
+    -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.9, 0, 0.2, 1);
+    transition: -webkit-transform 0.5s cubic-bezier(0.9, 0, 0.2, 1);
+    transition: transform 0.5s cubic-bezier(0.9, 0, 0.2, 1);
+    transition: transform 0.5s cubic-bezier(0.9, 0, 0.2, 1), -webkit-transform 0.5s cubic-bezier(0.9, 0, 0.2, 1);
+    -webkit-transition-delay: calc(0.2s + (0.02s * (var(--char-index))));
+            transition-delay: calc(0.2s + (0.02s * (var(--char-index)))); }
+  .slide-horizontal .char:before {
+    color: var(--clr-black);
+    -webkit-transform: translateX(110%);
+            transform: translateX(110%); }
 
-.zip-it:hover .char::before,
-.zip-it.animate .char::before {
-  -webkit-transform: translateY(-45%) scaleY(0);
-          transform: translateY(-45%) scaleY(0); }
+.slide-horizontal.animate .char:before {
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%); }
 
-.zip-it:hover .char::after,
-.zip-it.animate .char::after {
-  -webkit-transform: translateY(45%) scaleY(0);
-          transform: translateY(45%) scaleY(0); }
-
-.zip-it:hover .char,
-.zip-it:hover .char::before,
-.zip-it:hover .char::after, .zip-it.animate .char,
-.zip-it.animate .char::before,
-.zip-it.animate .char::after {
-  -webkit-transition-delay: calc(0.5s * var(--char-percent));
-          transition-delay: calc(0.5s * var(--char-percent)); }
+.slide-horizontal.animate .char:after {
+  -webkit-transform: translateX(-110%);
+          transform: translateX(-110%); }
 
 /*-----------------*/
 .plop-it {
