--- a/css/style.scss
+++ b/css/style.scss
@@ -386,14 +386,15 @@ nav.main-nav {
     margin-top: 65px;
     margin-bottom: 10px;
   }
-  .title {
-    text-align: center;
-    h4 {
-      font-size: 1.1rem;
-    }
+}
+.title {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  h4 {
+    font-size: 1.1rem;
   }
 }
-
 /*------- Blog Page -------*/
 #blogs {
   a.blog-item {
