--- a/css/style.scss
+++ b/css/style.scss
@@ -612,6 +612,8 @@ nav > li {
 /* splliting js animation */
 
 .slide-horizontal {
+  padding-left: 10px;
+  padding-right: 10px;
   .char {
     overflow: hidden;
     color: transparent;
