--- a/css/style.css
+++ b/css/style.css
@@ -577,33 +577,34 @@ nav > li {
           transform: matrix(1, 0, 0, 1, -50, -15); }
 
 /* splliting js animation */
-.slide-horizontal .char {
-  overflow: hidden;
-  color: transparent;
-  -webkit-transform: translateY(18px);
-          transform: translateY(18px); }
-  .slide-horizontal .char:before, .slide-horizontal .char:after {
-    top: -18px;
-    visibility: visible;
-    color: var(--clr-white);
-    -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.9, 0, 0.2, 1);
-    transition: -webkit-transform 0.5s cubic-bezier(0.9, 0, 0.2, 1);
-    transition: transform 0.5s cubic-bezier(0.9, 0, 0.2, 1);
-    transition: transform 0.5s cubic-bezier(0.9, 0, 0.2, 1), -webkit-transform 0.5s cubic-bezier(0.9, 0, 0.2, 1);
-    -webkit-transition-delay: calc(0.2s + (0.02s * (var(--char-index))));
-            transition-delay: calc(0.2s + (0.02s * (var(--char-index)))); }
-  .slide-horizontal .char:before {
-    color: var(--clr-black);
-    -webkit-transform: translateX(110%);
-            transform: translateX(110%); }
-
-.slide-horizontal.animate .char:before {
-  -webkit-transform: translateX(0%);
-          transform: translateX(0%); }
-
-.slide-horizontal.animate .char:after {
-  -webkit-transform: translateX(-110%);
-          transform: translateX(-110%); }
+.slide-horizontal {
+  padding-left: 10px;
+  padding-right: 10px; }
+  .slide-horizontal .char {
+    overflow: hidden;
+    color: transparent;
+    -webkit-transform: translateY(18px);
+            transform: translateY(18px); }
+    .slide-horizontal .char:before, .slide-horizontal .char:after {
+      top: -18px;
+      visibility: visible;
+      color: var(--clr-white);
+      -webkit-transition: -webkit-transform 0.5s cubic-bezier(0.9, 0, 0.2, 1);
+      transition: -webkit-transform 0.5s cubic-bezier(0.9, 0, 0.2, 1);
+      transition: transform 0.5s cubic-bezier(0.9, 0, 0.2, 1);
+      transition: transform 0.5s cubic-bezier(0.9, 0, 0.2, 1), -webkit-transform 0.5s cubic-bezier(0.9, 0, 0.2, 1);
+      -webkit-transition-delay: calc(0.2s + (0.02s * (var(--char-index))));
+              transition-delay: calc(0.2s + (0.02s * (var(--char-index)))); }
+    .slide-horizontal .char:before {
+      color: var(--clr-black);
+      -webkit-transform: translateX(110%);
+              transform: translateX(110%); }
+  .slide-horizontal.animate .char:before {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%); }
+  .slide-horizontal.animate .char:after {
+    -webkit-transform: translateX(-110%);
+            transform: translateX(-110%); }
 
 /*-----------------*/
 .plop-it {
