--- a/css/style.scss
+++ b/css/style.scss
@@ -611,34 +611,17 @@ nav > li {
 
 /* splliting js animation */
 
-.slide-horizontal {
+.slide-in {
   padding-left: 10px;
   padding-right: 10px;
+  perspective: 400px;
   .char {
-    overflow: hidden;
-    color: transparent;
-    transform: translateY(15px);
-
-    &:before,
-    &:after {
-      top: -15px;
-      visibility: visible;
-      color: var(--clr-white);
-      transition: transform 0.5s cubic-bezier(0.9, 0, 0.2, 1);
-      transition-delay: calc(0.2s + (0.02s * (var(--char-index))));
-    }
-
-    &:before {
-      color: var(--clr-black);
-      transform: translateX(110%);
-    }
+    transform-origin: 0% 50%;
+    transition: transform 1s ease-out 0.1s;
+    transform: rotateX(40deg) scale(0) translate(-50px, -29px);
   }
-
-  &.animate .char:before {
-    transform: translateX(0%);
-  }
-  &.animate .char:after {
-    transform: translateX(-110%);
+  &.animate .char {
+    transform: rotateX(0deg) scale(1) translate(0px, 0px);
   }
 }
 
