--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:300, 400, 600, 700&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Playfair+Display&display=swap");
 *,
 *::before,
 *::after {
@@ -29,7 +27,8 @@
 body {
   font-family: var(--f-Poppins);
   font-size: 100%;
-  line-height: 1.2; }
+  line-height: 1.2;
+  font-display: swap; }
 
 h1,
 h2,
