--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:300, 400, 600, 700&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Playfair+Display&display=swap");
 *,
 *::before,
 *::after {
@@ -36,6 +34,7 @@ body {
   font-family: var(--f-Poppins);
   font-size: 100%;
   line-height: 1.2;
+  font-display: swap;
 }
 
 h1,
