--- a/css/style.css
+++ b/css/style.css
@@ -242,6 +242,16 @@ nav.main-nav {
     opacity: 0; }
   to {
     opacity: 1; } }
+    .portfolio_slider_images .context {
+      position: absolute;
+      top: 10px;
+      right: 10px; }
+      .portfolio_slider_images .context span {
+        background-color: var(--clr-black);
+        color: var(--clr-white);
+        padding: 0px 10px;
+        border-radius: 20px;
+        letter-spacing: 1px; }
     .portfolio_slider_images h1 {
       font-size: 4.5rem;
       text-align: center;
@@ -307,6 +317,12 @@ nav.main-nav {
         max-width: 60%; } }
   #work-details img {
     margin: 10px auto; }
+  #work-details .links {
+    margin-bottom: 20px; }
+    #work-details .links a {
+      font-weight: bold;
+      margin: 10px;
+      vertical-align: middle; }
 
 /*------- About Page -------*/
 #about {
