--- a/css/style.css
+++ b/css/style.css
@@ -430,7 +430,8 @@ h4 {
 
 #blogs img {
   position: relative;
-  z-index: 1; }
+  z-index: 1;
+  width: 100%; }
 
 #blogs .info {
   position: relative;
@@ -494,7 +495,8 @@ footer .pagination {
       background: var(--clr-black);
       color: var(--clr-white);
       padding: 13px 26px;
-      line-height: 3.2; }
+      line-height: 3.2;
+      margin: -2px; }
       footer .pagination .pagination-links a.active, footer .pagination .pagination-links a:hover {
         background: var(--clr-black-6); }
 
